# AirbrakesV2

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  CMakeLists.txt  LICENSE  README.md  constants.py  legacy_project_setup.md  main.py  pyproject.toml  python-settings.env  requirements.txt  utils.py
.github/: renovate.json5
.github/workflows/: benchmark.yml  integration_tests.yml  pre-commit.yml  prek.yml  renovate.json5  ruff.yml  test_fail.yml  unit_tests.yml
Airbrakes/: airbrakes.py  imu.py  imu_data_packet.py  logger.py  servo.py  state.py  utils.py
Airbrakes/imu/: imu.py  imu_data_packet.py
Airbrakes/imu_package/: mscl.py
Scripts/: run_imu.py  run_logger.py  test_airbrakes.py  test_imu.py  test_logger.py  test_servo.py
airbrakes/: airbrakes.py  constants.py  context.py  logger.py  main.py  servo.py  state.py  utils.py
airbrakes/base_classes/: base_firm.py  base_imu.py  base_servo.py
airbrakes/data_handling/: apogee_prediction.py  apogee_predictor.py  data_processor.py  imu_data_packet.py  logged_data_packet.py  logger.py  processed_data_packet.py
airbrakes/data_handling/packets/: apogee_predictor_data_packet.py  context_data_packet.py  logger_data_packet.py  processed_data_packet.py  processor_data_packet.py  servo_data_packet.py
airbrakes/graphics/: application.py  custom_widgets.py  launch_selector.py  terminal.py  utils.py
airbrakes/graphics/bases/: base_telemetry.py
airbrakes/graphics/css/: benchmark.tcss  launch_selector.tcss  launcher.tcss  (+3 more)
airbrakes/hardware/: base_imu.py  camera.py  firm.py  imu.py  servo.py
airbrakes/imu/: data_processor.py  imu.py  imu_data_packet.py
airbrakes/interfaces/: base_imu.py  base_servo.py
airbrakes/mock/: MockIMU.py  display.py  extended_data_processor.py  mock_camera.py  mock_firm.py  mock_imu.py  mock_logger.py  mock_servo.py
airbrakes/simulation/: README.md  data_generator.py  random_config.py  rotation_manager.py  sim_config.py  sim_config.yaml  sim_imu.py  sim_utils.py  test.py
airbrakes/telemetry/: apogee_predictor.py  data_processor.py  logger.py
bench/: data.js
bench/add-pelican-3-data/: data.js
bench/add_launch_data/: data.js
bench/adding_integration_back/: data.js
bench/bye-windows/: data.js
bench/decent-changes/: data.js
bench/fix-pelicantor-1-data/: data.js
bench/fix-pitch/: data.js
bench/fsync/: data.js
bench/huntsville-config/: data.js
bench/imu-fix/: data.js
bench/imu-optimization/: data.js
bench/jit/: data.js
bench/launch-data/: data.js
bench/launch-day/: data.js
bench/logger_flushing/: data.js
bench/new-servo/: data.js
bench/optimize-rot-accel/: data.js
bench/pelican-3-config/: data.js
bench/pelicanator-data/: data.js
bench/pelicanator-data-2/: data.js
bench/polars/: data.js
bench/pre-commit-ci-update-config/: data.js
bench/quad_fit/: data.js
bench/read-metadata/: data.js
bench/refactor-logging/: data.js
bench/refine-code/: data.js
bench/revert-173-quad_fit/: data.js
bench/revert-188-servo-rewrite/: data.js
bench/servo-rewrite/: data.js
bench/sim-config-pelicanator/: data.js
bench/uncert/: data.js
bench/update-docs/: data.js
dev/bench/: data.js
kicad/: PiHat.kicad_pcb  PiHat.kicad_pro  PiHat.kicad_sch  fp-lib-table  sym-lib-table
kicad/symbols/: PiHatComponents.kicad_sym
launch_data/: README.md  imu_drop_test.csv  jackpot_launch_1.csv  legacy_launch_2.csv  metadata.json  metadata_schema.json
launch_data/old_imu_launches/: legacy_launch_2.csv
launch_data/pretended_firm_launches/: gov_work_launch_1_ab.FRM  government_work_1.csv  government_work_1_airbrakes.csv  government_work_1_nosecone.csv  government_work_2_airbrakes.csv  government_work_2_nosecone.csv  jackpot_1_airbrakes.csv  jackpot_1_nosecone.csv
launch_data/raw_firm_data/: gov_work_launch_1_ab.FRM  government_work_1_airbrakes.FRM  government_work_1_nosecone.FRM  government_work_2_airbrakes.FRM  government_work_2_nosecone.FRM  jackpot_1_airbrakes.FRM  jackpot_1_nosecone.FRM  jackpot_2_airbrakes.FRM  jackpot_2_grave.FRM  jackpot_3_airbrakes.FRM  subscale_avab.FRM
launch_data/real_firm_launches/: jackpot_launch_1.csv  jackpot_launch_3.csv
notebooks/: parameter_estimation.py
scripts/: benchmark_fields.py  coplot_logs.py  data_visualizer.py  make_plots.ipynb  parse_data.py  plot_imu_log.py  plot_log_file.py  reboot_firm.py  run_2_servo.py  run_2_servo_microcontroller.py  run_bmp180.py  run_buzzer.py  run_buzzer_gui.py  run_camera.py  run_current_sensor.py  run_firm.py  run_hardware_pwm.py  run_hprm.py  run_imu.py  run_lewan_servo.py  run_log_mag.py  run_logger.py  run_mag_cal.py  run_mag_calibration.py  run_main_local.py  run_microcontroller_servo.py  run_new_servo.py  run_servo.py  run_servo_and_encoder.py  run_servo_and_encoder_tui.py  run_set_gyro_cal.py  run_set_mag_cal.py  servo_tui.tcss  startup.py  toggle_servo.py
scripts/imu_data/: imu_drop_test.csv  log_9.csv
simulator/: data_gen.py  rotation_manager.py  sim_config.yaml  sim_imu.py  test.py
simulator/thrust_curves/: AeroTech_L1940X.csv
src/airbrakes/: main.py  state.py
tests/: conftest.py  test_airbrakes.py  test_apogee_predictor.py  test_context.py  test_context_packet.py  test_data_processor.py  test_debug_packet.py  test_imu.py  test_imu_data_packet.py  test_integration.py  test_logged_data_packet.py  test_logger.py  test_main.py  test_processed_data_packet.py  test_servo.py  test_servo_packet.py  test_state.py  test_utils.py
tests/auxil/: launch_cases.py  utils.py
tests/imu_data/: README.md  xminus.csv  xplus.csv  yminus.csv  yplus.csv  zminus.csv  zplus.csv
tests/test_components/: test_apogee_predictor.py  test_data_processor.py  test_logger.py  test_state.py
tests/test_graphics/: conftest.py  test_launcher_screen.py
tests/test_hardware/: test_camera.py  test_firm.py  test_imu.py  test_servo.py
tests/test_packets/: test_apogee_predictor_data_packet.py  test_context_packet.py  test_imu_data_packet.py  test_logged_data_packet.py  test_logger_data_packet.py  test_processed_data_packet.py  test_processor_data_packet.py  test_servo_packet.py
(+42 files in other folders)
