[project]
name = "AirbrakesV2"
description = "Logic for air brakes as a part of the NASA Student Launch Competition"
# We use Python 3.14t only! There is currently no way to specify this in pyproject.toml
requires-python = ">=3.14, <3.15"
version = "1.7.0"
readme = "README.md"
dependencies = [
    "gpiozero",
    "msgspec",
    "numpy",
    "colorama",
    "scipy",
    "textual",
    "mscl-rs",
    "numpy-quaternion>=2024.0.10",
    # Pinned versions because we need python 3.14 free threading wheels:
    "polars==1.36.0b2",
    "polars-runtime-32",
    # Need the below to get the servo to work. Make sure you are using the full Raspberry Pi OS
    # 64 bit image and not the lite. You also need to add `dtparam=i2c_arm=on` in the /boot/firmware/config.txt
    "rpi-gpio>=0.7.1",
    # Please see library docs for usage and installation on the Pi 4/5. You need to add 
    # `dtoverlay=pwm-2chan` in /boot/firmware/config.txt.
    "rpi-hardware-pwm>=0.3.0",
]

# TODO: Remove this once polars has official wheels for python 3.14t
[tool.uv.sources]
polars-runtime-32 = [
    { url = "https://github.com/harshil21/polars-runtime-32-ft/raw/refs/heads/main/wheels/polars_runtime_32-1.36.0b2-cp314-cp314t-manylinux_2_39_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://github.com/harshil21/polars-runtime-32-ft/raw/refs/heads/main/wheels/polars_runtime_32-1.36.0b2-cp314-cp314t-manylinux_2_39_x86_64.whl", marker = "platform_machine == 'arm64'" }
]

[project.optional-dependencies]
# Need to run `sudo apt install liblgpio-dev swig` to build and install everything encoder related.
encoder = [
    "swig>=4.3.0",
    "lgpio>=0.2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov",
    "ruff>=0.12.12",
    "pre-commit",
    "pytest-benchmark>=5.1.0",
    # "docformatter",
    "ty>=0.0.1a20",
]

profiling = [
    "pyinstrument>=5.0.1",
    "line-profiler>=4.2.0",
]

[project.scripts]
mock = "airbrakes.main:run_mock_flight"
real = "airbrakes.main:run_real_flight"
sim = "airbrakes.main:run_sim_flight"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV:
[tool.uv]
python-preference = "only-managed"

# HATCH:
[tool.hatch.build.targets.wheel]
packages = ["airbrakes"]

[tool.hatch.build.targets.wheel.force-include]
# specify one launch file so that the mock flight can be run as a demo with uvx.
"launch_data/genesis_launch_1.csv" = "/launch_data/genesis_launch_1.csv"

# RUFF:
[tool.ruff]
line-length = 100
target-version = "py314"
show-fixes = true
exclude = ["scripts"]

[tool.ruff.lint]
# Some of the ones prefixed with a d should probably not be ignored, but that can be fixed later.
ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PERF203", "ISC001", "S311",
    "D102", "D103", "D104", "D107", "D205", "D401", "D200"]
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
    "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "Q", "INP",
    "W", "YTT", "DTZ", "ARG", "T20", "FURB", "D100", "D101", "D300", "D418",
    "D419", "S", "NPY", "D", "D213"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
"airbrakes/mock/display.py" = ["T201"]
"tests/*.py" = ["T20", "S101", "D100", "ARG001", "RUF012"]

[tool.pytest.ini_options]
filterwarnings = [
    "error", # treat warnings as errors
    "ignore:Could not import LGPIOFactory", # ignore warning about LGPIO
    "ignore:To reduce servo jitter", # ignore warning about pigpio
    "ignore:Covariance of the parameters", # ignore warning about scipt curve_fit
]
addopts = "--benchmark-skip"  # skip benchmarks by default:
markers = [
    "imu_benchmark",
]

[tool.coverage.run]
branch = true
# Unfortunately the multiprocessing support is causing some tests to fail (it seems to make things
# slow)
# concurrency = ["multiprocessing", "thread"]
# sigterm = true
# parallel = true
source = ["airbrakes"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "airbrakes/mock/*",
    "airbrakes/simulation/*",
    "airbrakes/main.py",
]

[tool.coverage.report]
skip_covered = false
skip_empty = true
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if sys.platform == 'win32'",
    "@overload",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "from queue import Empty",
]
show_missing = true
fail_under = 88

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ty.environment]
root = ["./airbrakes"]

[tool.ty.src]
exclude = ["tests", "scripts"]

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
pre-summary-newline = true
make-summary-multi-line = true
recursive = true
in-place = true
